alterando rota front

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
   </form>
   <script type="text/javascript">
     // conectar com o socket do back-end 
-    var socket = io('http://localhost:8000');
+    var socket = io('https://chatdev-nodejs.herokuapp.com/');
 
     // função que recebe a mensagem e renderiza ela em tela 
     function renderMessage(message) {
